touch id, change node address

--- a/BeamWallet/ViewControllers/Login/EnterWalletPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Login/EnterWalletPasswordViewController.xib
@@ -24,6 +24,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EnterWalletPasswordViewController" customModule="BeamWallet" customModuleProvider="target">
             <connections>
                 <outlet property="errorLabel" destination="h25-0u-qRO" id="6tI-nz-L9L"/>
+                <outlet property="loginLabel" destination="U5v-Lj-JVe" id="CU6-jx-dwt"/>
                 <outlet property="mainStack" destination="vUf-hW-nJa" id="4bm-Pt-d8w"/>
                 <outlet property="passField" destination="gDD-bM-m0V" id="eSe-1W-C7L"/>
                 <outlet property="passViewHeight" destination="2yF-bN-MWa" id="9oj-7T-K0c"/>
