--- a/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletProgressCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletProgressCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -43,34 +43,34 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="In progress" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TlK-Sl-djr">
-                                <rect key="frame" x="15" y="15" width="91.5" height="21.5"/>
+                                <rect key="frame" x="15" y="15" width="90.5" height="21"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="18"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="LQy-uL-llp">
-                                <rect key="frame" x="15" y="53.5" width="270" height="49.5"/>
+                                <rect key="frame" x="15" y="53" width="270" height="49.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="UfE-Yf-jhq">
                                         <rect key="frame" x="0.0" y="0.0" width="86.5" height="49.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RECEIVING" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zAw-8l-l7H">
-                                                <rect key="frame" x="0.0" y="0.0" width="62" height="14.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="63" height="14"/>
                                                 <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="12"/>
                                                 <color key="textColor" red="0.64313725490196072" green="0.70196078431372544" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="XZJ-rK-ClF">
-                                                <rect key="frame" x="0.0" y="19.5" width="83" height="30"/>
+                                                <rect key="frame" x="0.0" y="19" width="79" height="30.5"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconReceived" translatesAutoresizingMaskIntoConstraints="NO" id="10J-v4-i3g">
-                                                        <rect key="frame" x="0.0" y="5" width="20" height="20"/>
+                                                        <rect key="frame" x="0.0" y="7.5" width="16" height="16"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bTF-FJ-04L">
-                                                        <rect key="frame" x="25" y="0.0" width="58" height="30"/>
+                                                        <rect key="frame" x="21" y="0.5" width="58" height="30"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="cmw-df-ShN">
-                                                                <rect key="frame" x="0.0" y="0.0" width="22" height="30"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="21" height="30"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="30" id="JUn-mQ-PlT"/>
                                                                 </constraints>
@@ -79,7 +79,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconSymbol" translatesAutoresizingMaskIntoConstraints="NO" id="QkC-2T-Sqs">
-                                                                <rect key="frame" x="26" y="8.5" width="10" height="15"/>
+                                                                <rect key="frame" x="25" y="8.5" width="10" height="15"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="15" id="0rh-T3-x2E"/>
                                                                     <constraint firstAttribute="width" constant="10" id="J3X-NE-HL9"/>
@@ -103,22 +103,22 @@
                                         <rect key="frame" x="91.5" y="0.0" width="87" height="49.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SENDING" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Qz-UA-hdN">
-                                                <rect key="frame" x="0.0" y="0.0" width="52" height="14.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="53.5" height="14"/>
                                                 <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="12"/>
                                                 <color key="textColor" red="0.64313725489999995" green="0.70196078429999997" blue="0.74117647060000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="TOv-eS-3XZ">
-                                                <rect key="frame" x="0.0" y="19.5" width="83.5" height="30"/>
+                                                <rect key="frame" x="0.0" y="19" width="79.5" height="30.5"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconSent" translatesAutoresizingMaskIntoConstraints="NO" id="GvM-NG-yIc">
-                                                        <rect key="frame" x="0.0" y="5" width="20" height="20"/>
+                                                        <rect key="frame" x="0.0" y="7.5" width="16" height="16"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nZD-ff-GLJ">
-                                                        <rect key="frame" x="25" y="0.0" width="58.5" height="30"/>
+                                                        <rect key="frame" x="21" y="0.5" width="58.5" height="30"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Mp8-tI-hcy">
-                                                                <rect key="frame" x="0.0" y="0.0" width="22" height="30"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="21" height="30"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="30" id="leH-hU-LVw"/>
                                                                 </constraints>
@@ -127,7 +127,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconSymbol" translatesAutoresizingMaskIntoConstraints="NO" id="Ccv-X7-xeS">
-                                                                <rect key="frame" x="26" y="8.5" width="10" height="15"/>
+                                                                <rect key="frame" x="25" y="8.5" width="10" height="15"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="10" id="0Vl-da-CKA"/>
                                                                     <constraint firstAttribute="height" constant="15" id="HaA-Of-UoT"/>
@@ -151,22 +151,22 @@
                                         <rect key="frame" x="183.5" y="0.0" width="86.5" height="49.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MATURING" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IUW-IO-B4d">
-                                                <rect key="frame" x="0.0" y="0.0" width="61.5" height="14.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="62" height="14"/>
                                                 <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="12"/>
                                                 <color key="textColor" red="0.64313725489999995" green="0.70196078429999997" blue="0.74117647060000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="tvh-q3-cTL">
-                                                <rect key="frame" x="0.0" y="19.5" width="75" height="30"/>
+                                                <rect key="frame" x="0.0" y="19" width="71" height="30.5"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconMaturing" translatesAutoresizingMaskIntoConstraints="NO" id="djL-eG-90t">
-                                                        <rect key="frame" x="0.0" y="5" width="20" height="20"/>
+                                                        <rect key="frame" x="0.0" y="7.5" width="16" height="16"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DSE-VL-y7g">
-                                                        <rect key="frame" x="25" y="0.0" width="50" height="30"/>
+                                                        <rect key="frame" x="21" y="0.5" width="50" height="30"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="sZD-aN-1d6">
-                                                                <rect key="frame" x="0.0" y="0.0" width="22" height="30"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="21" height="30"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="30" id="Qz8-zU-LXh"/>
                                                                 </constraints>
@@ -175,7 +175,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconSymbol" translatesAutoresizingMaskIntoConstraints="NO" id="S3c-Yg-Mnn">
-                                                                <rect key="frame" x="26" y="8.5" width="10" height="15"/>
+                                                                <rect key="frame" x="25" y="8.5" width="10" height="15"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="15" id="Qay-ZT-SHN"/>
                                                                     <constraint firstAttribute="width" constant="10" id="uil-RM-3F9"/>
@@ -244,6 +244,7 @@
                 <outlet property="currencyReceivingIcon" destination="QkC-2T-Sqs" id="WwL-IZ-Ln6"/>
                 <outlet property="currencySendingIcon" destination="Ccv-X7-xeS" id="3O8-mm-q1G"/>
                 <outlet property="mainStackView" destination="LQy-uL-llp" id="hcg-rd-H1X"/>
+                <outlet property="mainView" destination="Mdh-nY-eDo" id="yrE-uQ-ayL"/>
                 <outlet property="maturingLabel" destination="sZD-aN-1d6" id="1OU-as-bbH"/>
                 <outlet property="maturingStack" destination="22w-Kq-Ukj" id="dy7-rQ-wKE"/>
                 <outlet property="receivingLabel" destination="cmw-df-ShN" id="hRg-xj-oDH"/>
